# demo-grpc-ws

./: .env.template  .gitignore  docker-compose.yml  run.sh
api/: Dockerfile  grpc_client.py  main.py  pyproject.toml
api/proto/: media.proto  media_pb2.py  media_pb2_grpc.py
media-service/: Dockerfile  index.js  package.json
ui/: Dockerfile  package.json
ui/src/: App.vue
